my-react-website/src/style/AboutMe.css
.aboutMeTitleContainer {
  color: white;
  background-color: rgb(24, 24, 24);
  min-height: 100vh;
  height: fit-content;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: calc(1.4vw + 1.4vh + 1.4vmin);
  font-family: "Chakra Petch", sans-serif;
}

.aboutMeDescriptionContainer {
  color: white;
  background-color: rgb(24, 24, 24);
  height: fit-content;
  display: flex;
  width: 100%;
  justify-content: center;
}

.aboutMeDescriptionTitle {
  color: white;
  font-size: calc(1.5vw + 1.5vh + 1.5vmin);
  font-family: "Chakra Petch", sans-serif;
  text-align: left;
  margin: 2%;
  margin-bottom: 1%;
  font-weight: 800;
  /* remove option to highlight text */
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}
.aboutMeDescriptionText {
  font-size: calc(0.7vw + 0.7vh + 0.7vmin);
  font-family: "Chakra Petch", sans-serif;
  text-align: left;
  margin: 2%;
  margin-top: 1%;
}

.aboutMeSubtitles {
  color: white;
  background-color: rgb(24, 24, 24);
  padding: 3%;
  /* add font to adjust to screen size */
  font-size: calc(0.9vw + 0.9vh + 0.9vmin);
}

.aboutMeDescriptionBorder {
  border-radius: 10px;
  border: 1px solid white;
  width: 90%;
  height: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 1%;
  position: relative;
}

.animateContent {
  background-color: rgba(122, 122, 122, 0.144);
  backdrop-filter: blur(8px);
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  opacity: 1;
  border-radius: 10px;
}

.animateHoverContent {
  background-color: rgba(122, 122, 122, 0.144);
  backdrop-filter: blur(8px);
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 10px;
  cursor: pointer;



    /* remove option to highlight text */
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}

.detailContainer {
  position: fixed;
  display: flex;
  top: 0;
  height: 100vh;
  width: 100vw;
  transform: rotate(180deg);
  /* we can use the above rotate trick in order to make the extra details portion of the menu */
}

.detailSection {
  position: absolute;
  width: 25%;
  background-color: rgb(198, 183, 152);
  overflow: hidden;
  /* rotate this entire div 180 */
}



/* this is a test of githubs activity feature */
/* git remote set-url origin https://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@github.com/konradmh3/reactBio.git */

